[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/engine/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
[connection signal="invicibility_started" from="." to="." method="_on_Hurtbox_invicibility_started"]
[connection signal="invicibilty_ended" from="." to="." method="_on_Hurtbox_invicibilty_ended"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
